--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sharan98.github.io/react-app",
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^2.0.1",
